--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "names": {
-    "yourName": "Rohit",
-    "herName": "Sonam"
+    "yourName": "XYZ",
+    "herName": "XYZ"
   },
   "proposal": {
     "title": "Our Forever",
